--- a/index.html
+++ b/index.html
@@ -5,42 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beyond The Art</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+    <!--- Fonts --->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins&family=Special+Elite&display=swap" rel="stylesheet">
+    <!--- Styles --->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins&family=Special+Elite&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <section id="nav">
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-            <a href="" class="navbar-brand" id="brand">Beyond the Art</a>
+        <nav class="navbar navbar-expand-lg navbar-dark background-color">
+            <a href="" class="navbar-brand" id="brand"><img src="images/icon-beyond.png" alt="icon-beyond" id="icon-beyond"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link"  href="" >Home</a>
+                        <a class="nav-link"  href="index.html" >Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"  href="" >Arts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="" >About us</a>
+                        <a class="nav-link"  href="about.html" >About us</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </section>
-    <section class="section parallax bg1">
-        <div>
-            <h1>Beyond the Art</h1>
+
+    <section class="intro">
+        <div class="start-page">
+            <img src="images/beyond.jpg" alt="beyond">
+            <h1>Beyond The Art</h1>
         </div>
     </section>
+
     <hr>
     <section id="perks">
         <div class="perks one">
@@ -58,8 +62,8 @@
     <section class="VisualArt">
         <h1>Visual Art</h1>
         <div class="gallery">
-            <img src="images/andres.jpg" alt="andress" class="art-show">
-            <div class="description">
+            <img src="images/andres.jpg" alt="andress" class="art-show-right">
+            <div class="description-left">
                 <h1>The Bonifacio Monument</h1>
                 <h5>Guillermo Tolentino</h5>
                 <p>The artwork that was made and designed by Guillermo Tolentino is commonly known as the Bonifacio Monument or Monumento, it is about how Bonifacio stood to fight for our country’s freedom.
@@ -68,8 +72,8 @@
         </div>
         <hr>
         <div class="gallery">
-            <img src="images/grayground.jpg" alt="grayground class=" class="art-show">
-            <div class="description">
+            <img src="images/grayground.jpg" alt="grayground class=" class="art-show-left">
+            <div class="description-right">
                 <h1>grayground</h1>
                 <h5>Ronald Ventura</h5>
                 <p>Presented with powerful forces
@@ -84,35 +88,26 @@
             </div>
         </div>
         <div class="gallery">
-            <img src="images/The_Blood_Compact_by_Juan_Luna.jpg" alt="blood_compact" class="art-show">
-            <div class="description">
+            <img src="images/The_Blood_Compact_by_Juan_Luna.jpg" alt="blood_compact" class="art-show-right">
+            <div class="description-left">
                 <h1>The Bonifacio Monument</h1>
                 <h5>Juan Luna</h5>
-                <p>Blood compact (Spanish: Pacto de sangre; Filipino: Sanduguan) was an ancient ritual in the Philippines intended to seal a friendship or treaty, or to validate an agreement. The contracting parties would cut their hands and pour their blood into a cup filled with liquid, such as wine, and drink the mixture.
-</p>
+                <p>Blood compact (Spanish: Pacto de sangre; Filipino: Sanduguan) was an ancient ritual in the Philippines intended to seal a friendship or treaty, or to validate an agreement. The contracting parties would cut their hands and pour their blood into a cup filled with liquid, such as wine, and drink the mixture.</p>
             </div>
         </div>
     </section>
     <section class="Music">
         <h1>Music</h1>
         <div class="gallery">
-            <img src="images/francis.jpg" alt="francis" class="art-show">
-            <div class="description">
+            <img src="images/francis.jpg" alt="francis" class="art-show-left">
+            <div class="description-right">
                 <h1>Kaleidoscope World</h1>
                 <h5>Francis Magalona</h5>
                 <p>"Kaleidoscope World" is a 1995 song performed by the Filipino rapper Francis Magalona. It was first included in his 1995 studio album FreeMan.
                     “You can’t talk peace and have a gun.” It’s a short and simple line in the song, but a profoundly concise stand against the kind of violence we face in our country today.</p>
             </div>
         </div>
-        <div class="gallery">
-            <img src="images/francis.jpg" alt="francis" class="art-show">
-            <div class="description">
-                <h1>Kaleidoscope World</h1>
-                <h5>Francis Magalona</h5>
-                <p>"Kaleidoscope World" is a 1995 song performed by the Filipino rapper Francis Magalona. It was first included in his 1995 studio album FreeMan.
-                    “You can’t talk peace and have a gun.” It’s a short and simple line in the song, but a profoundly concise stand against the kind of violence we face in our country today.</p>
-            </div>
-        </div>
+        
     </section>
 
 </body>
