--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beyond The Art</title>
-    <!--- Fonts --->
+    <meta name="description" content="An art appreciation project from students of 1.6 - Bachelor of Science in Information Technology in National Teachers College">
+    <meta name="author" content="Group 7">
+    <link rel="icon" href="images/museum.png">
+    <title>Beyond the Art</title>
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins&family=Special+Elite&display=swap" rel="stylesheet">
-    <!--- Styles --->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600&display=swap" rel="stylesheet">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/478a29708d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <section id="nav">
-        <nav class="navbar navbar-expand-lg navbar-dark background-color">
-            <a href="" class="navbar-brand" id="brand"><img src="images/icon-beyond.png" alt="icon-beyond" id="icon-beyond"></a>
+    <section id="navigation">
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <a href="" class="navbar-brand" id="brand">Beyond The Art</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,7 +33,7 @@
                         <a class="nav-link"  href="index.html" >Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="" >Arts</a>
+                        <a class="nav-link"  href="arts.html" >Arts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"  href="about.html" >About us</a>
@@ -37,78 +42,57 @@
             </div>
         </nav>
     </section>
-
-    <section class="intro">
-        <div class="start-page">
-            <img src="images/beyond.jpg" alt="beyond">
-            <h1>Beyond The Art</h1>
-        </div>
-    </section>
-
-    <hr>
-    <section id="perks">
-        <div class="perks one">
-
-        </div>
-        <div class="perks two">
-
-        </div>
-        <div class="perks three">
-
-        </div>
-        <h1>Beyond the Art</h1>
-    </section>
-    <hr>
-    <section class="VisualArt">
-        <h1>Visual Art</h1>
-        <div class="gallery">
-            <img src="images/andres.jpg" alt="andress" class="art-show-right">
-            <div class="description-left">
-                <h1>The Bonifacio Monument</h1>
-                <h5>Guillermo Tolentino</h5>
-                <p>The artwork that was made and designed by Guillermo Tolentino is commonly known as the Bonifacio Monument or Monumento, it is about how Bonifacio stood to fight for our country’s freedom.
-                </p>
+    <section id="intro-page">
+        <div class="container-fluid">
+            <div class="row intro">
+                <div class="col-lg-6">
+                    <br><br>
+                    <h1 class="title-text">Beyond The Art</h1>
+                    <h3 class="title-text">Web Art exhibit</h3>
+                    <br>
+                    <p>An art appreciation project from students of 1.6 - 
+                        Bachelor of Science in Information Technology in National 
+                        Teachers College</p>
+                    <br>
+                    <a href="arts.html" class="btn btn-outline-dark btn-lg" tabindex="-1" role="button" aria-disabled="true"><i class="fas fa-palette"></i>Arts</a>
+                    <a href="about.html" class="btn btn-outline-dark btn-lg" tabindex="-1" role="button" aria-disabled="true"><i class="fas fa-user"></i>About us</a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="images/beyond.jpg" alt="beyond" class="img-fluid">
+                </div>
             </div>
         </div>
+        <br><br>
         <hr>
-        <div class="gallery">
-            <img src="images/grayground.jpg" alt="grayground class=" class="art-show-left">
-            <div class="description-right">
-                <h1>grayground</h1>
-                <h5>Ronald Ventura</h5>
-                <p>Presented with powerful forces
-                    represented by horses in mid-stride going in
-                    opposite directions. A white thoroughbred and
-                    ghostly horses going right; a couple of skeletal,
-                    muscular, shadowy others going left. What lies
-                    between is the chasm, the void, the gray area, mere
-                    anarchy and its happy riot of robots, dog-men,
-                    disembodies figures, cryptic texts and menacing
-                    doodles.</p>
-            </div>
+    </section>
+    <section id="perks"> 
+        <div class="section-header">
+            <h2>A virtual art exhibit designed to recreate an art gallery experience</h2>
+            <h3> Our goals are:</h3> 
         </div>
-        <div class="gallery">
-            <img src="images/The_Blood_Compact_by_Juan_Luna.jpg" alt="blood_compact" class="art-show-right">
-            <div class="description-left">
-                <h1>The Bonifacio Monument</h1>
-                <h5>Juan Luna</h5>
-                <p>Blood compact (Spanish: Pacto de sangre; Filipino: Sanduguan) was an ancient ritual in the Philippines intended to seal a friendship or treaty, or to validate an agreement. The contracting parties would cut their hands and pour their blood into a cup filled with liquid, such as wine, and drink the mixture.</p>
+        <div class="container-fluid">
+            <div class="row perks">
+                <div class="col-lg-4 perk">
+                    <img src="images/location.png" alt="location" class="symbol">
+                    <h2><b>Locality</b></h2>
+                    <h4>Showcases arts purely from the Philippines</h4>
+                </div>
+                <div class="col-lg-4 perk">
+                    <img src="images/var.png" alt="various" class="symbol">
+                    <h2><b>Variousness</b></h2>
+                    <h4>Showcases various forms of art</h4>
+                </div>
+                <div class="col-lg-4 perk">
+                    <img src="images/target.png" alt="artists" class="symbol">
+                    <h2><b>Artists</b></h2>
+                    <h4>Showcases different artist and their meaningful masterpiece</h4>
+                </div>
             </div>
         </div>
     </section>
-    <section class="Music">
-        <h1>Music</h1>
-        <div class="gallery">
-            <img src="images/francis.jpg" alt="francis" class="art-show-left">
-            <div class="description-right">
-                <h1>Kaleidoscope World</h1>
-                <h5>Francis Magalona</h5>
-                <p>"Kaleidoscope World" is a 1995 song performed by the Filipino rapper Francis Magalona. It was first included in his 1995 studio album FreeMan.
-                    “You can’t talk peace and have a gun.” It’s a short and simple line in the song, but a profoundly concise stand against the kind of violence we face in our country today.</p>
-            </div>
-        </div>
-        
+    <section id="footer">
+        <hr id="footer-id">
+        © 2021 Group 7 of 1.6-BSIT
     </section>
-
 </body>
 </html>
