--- a/about.html
+++ b/about.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--- Fonts --->
+    <meta name="description" content="An art appreciation project from students of 1.6 - Bachelor of Science in Information Technology in National Teachers College">
+    <meta name="author" content="Group 7">
+    <link rel="icon" href="images/users.png">
+    <title>About us</title>
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins&family=Special+Elite&display=swap" rel="stylesheet">
-    <!--- Styles --->
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600&display=swap" rel="stylesheet">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>About us</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/478a29708d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <section id="nav">
-        <nav class="navbar navbar-expand-lg navbar-dark background-color">
-            <a href="" class="navbar-brand" id="brand"><img src="images/icon-beyond.png" alt="icon-beyond" id="icon-beyond"></a>
+    <section id="navigation">
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <a href="" class="navbar-brand" id="brand">Beyond The Art</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,7 +33,7 @@
                         <a class="nav-link"  href="index.html" >Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="" >Arts</a>
+                        <a class="nav-link"  href="arts.html" >Arts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"  href="about.html" >About us</a>
@@ -36,11 +42,57 @@
             </div>
         </nav>
     </section>
-    <section class="about-us">
-        <div>
-
+    <section id="about-us">
+        <h1>About us</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <img src="images/user-icon/Marceline.ico" alt="">
+                    <h3><b>Anthonette Fajardo</b></h3>
+                    <h4>Leader</h4>
+                    <p>"Badtrip nako"</p>
+                </div>
+            </div>
+            <h2>Members</h2>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="images/user-icon/Apache.ico" alt="">
+                    <h3><b>Rico Dute</b></h3>
+                    <h4>Member</h4>
+                    <p>"long hair ako ih"</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="images/user-icon/Batman (9).ico" alt="">
+                    <h3><b>Julius Terrence Duff</b></h3>
+                    <h4>Member</h4>
+                    <p>"Ako si batman!"</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="images/user-icon/Another World (3).ico" alt="">
+                    <h3><b>Josiah Eucariza</b></h3>
+                    <h4>Member</h4>
+                    <p>"....."</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="images/user-icon/Avatar The Last Airbender.ico" alt="">
+                    <h3><b>Jacky Dialino</b></h3>
+                    <h4>Member</h4>
+                    <p>"sat"</p>
+                </div>
+                <div class="col-lg-6">
+                    <img src="images/user-icon/Astronaut.ico" alt="">
+                    <h3><b>Jessica Lean Dapitan</b></h3>
+                    <h4>Member</h4>
+                    <p>Nasa moon ako guys</p>
+                </div>
+            </div>
         </div>
     </section>
-    
+    <section id="footer">
+        <hr id="footer-id">
+        © 2021 Group 7 of 1.6-BSIT
+    </section>
 </body>
 </html>
