--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An art appreciation project from students of 1.6 - Bachelor of Science in Information Technology in National Teachers College">
+    <meta name="description" content="An art appreciation project of students from 1.6 - Bachelor of Science in Information Technology in National Teachers College">
     <meta name="author" content="Group 7">
     <link rel="icon" href="images/museum.png">
     <title>Beyond the Art</title>
@@ -50,7 +50,7 @@
                     <h1 class="title-text">Beyond The Art</h1>
                     <h3 class="title-text">Web Art exhibit</h3>
                     <br>
-                    <p>An art appreciation project from students of 1.6 - 
+                    <p>An art appreciation project of students from 1.6 - 
                         Bachelor of Science in Information Technology in National 
                         Teachers College</p>
                     <br>
