--- a/arts.html
+++ b/arts.html
@@ -187,7 +187,7 @@
                     <img src="images/buybust.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
-            <h3>Theather Art</h3>
+            <h3>Theater Art</h3>
             <div class="row sptlght">
                 <div class="col-lg-6">
                     <img src="images/el-bimbo.jpg" alt="" class="img-fluid img-thumbnail">
