--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An art appreciation project of students from 1.6 - Bachelor of Science in Information Technology in National Teachers College">
+    <meta name="description" content="An art appreciation project from students of 1.6 - Bachelor of Science in Information Technology in National Teachers College">
     <meta name="author" content="Group 7">
     <link rel="icon" href="images/museum.png">
     <title>Beyond the Art</title>
@@ -21,6 +21,7 @@
     <script src="https://kit.fontawesome.com/478a29708d.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container-fluid">
     <section id="navigation">
         <nav class="navbar navbar-expand-lg navbar-light ">
             <a href="" class="navbar-brand" id="brand">Beyond The Art</a>
@@ -43,16 +44,18 @@
         </nav>
     </section>
     <section id="intro-page">
-        <div class="container-fluid">
             <div class="row intro">
                 <div class="col-lg-6">
                     <br><br>
                     <h1 class="title-text">Beyond The Art</h1>
                     <h3 class="title-text">Web Art exhibit</h3>
                     <br>
-                    <p>An art appreciation project of students from 1.6 - 
-                        Bachelor of Science in Information Technology in National 
-                        Teachers College</p>
+                    <p>Our web exhibit consists of art collections 
+                        that has a connection to us and have important 
+                        meaning, we have gathered these forms of art 
+                        to introduce and represent original and unique 
+                        craftsmanship.
+                    </p>
                     <br>
                     <a href="arts.html" class="btn btn-outline-dark btn-lg" tabindex="-1" role="button" aria-disabled="true"><i class="fas fa-palette"></i>Arts</a>
                     <a href="about.html" class="btn btn-outline-dark btn-lg" tabindex="-1" role="button" aria-disabled="true"><i class="fas fa-user"></i>About us</a>
