--- a/arts.html
+++ b/arts.html
@@ -21,6 +21,7 @@
     <script src="https://kit.fontawesome.com/478a29708d.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container-fluid">
     <section id="navigation">
         <nav class="navbar navbar-expand-lg navbar-light ">
             <a href="" class="navbar-brand" id="brand">Beyond The Art</a>
@@ -47,8 +48,8 @@
             <br>
             <h2>Virtual Gallery Section</h2>
         </div>
-        <h3>Sculptures</h3>
-        <div class="container-fluid">
+        <hr>
+        <h3><b>Sculptures</b></h3>
             <div class="row sptlght">
                 <div class="col-lg-6">
                     <img src="images/Carcass-Cornucopia.jpg" alt="" class="img-fluid img-thumbnail">
@@ -81,7 +82,8 @@
                     <img src="images/bonifacio.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
-            <h3>Paintings</h3>
+            <hr>
+            <h3><b>Paintings</b></h3>
             <div class="row sptlght">
                 <div class="col-lg-6">
                     <img src="images/grayground.jpg" alt="" class="img-fluid img-thumbnail">
@@ -112,7 +114,8 @@
                     <img src="images/blood-compact.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
-            <h3>Music</h3>
+            <hr>
+            <h3><b>Music</b></h3>
             <div class="row sptlght">
                 <div class="col-lg-6">
                     <img src="images/francis.jpg" alt="" class="img-fluid img-thumbnail">
@@ -149,7 +152,8 @@
                     <img src="images/gloc.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
-            <h3>Film</h3>
+            <hr>
+            <h3><b>Music</b></h3>
             <div class="row sptlght">
                 <div class="col-lg-6">
                     <img src="images/luna.jpg" alt="" class="img-fluid img-thumbnail">
@@ -187,7 +191,8 @@
                     <img src="images/buybust.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
-            <h3>Theater Art</h3>
+            <hr>
+            <h3><b>Theather Art</b></h3>
             <div class="row sptlght">
                 <div class="col-lg-6">
                     <img src="images/el-bimbo.jpg" alt="" class="img-fluid img-thumbnail">
@@ -226,7 +231,129 @@
                     <img src="images/dina.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
-        </div>
+            <hr>
+            <h3><b>Our Soul Art</b></h3>
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" data-bs-pause="'hover'">
+                <div class="carousel-inner">
+                    <!-- Dute -->
+                    <div class="carousel-item active" data-bs-pause="'hover'">
+                        <div class="sptlght">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/dute-before.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;"> 
+                                    <h5>Before</h5>
+                                </div>
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/dute-after.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;">
+                                    <h5>After</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div col-lg-12>
+                                    <h2><b>Disoriented Loop</b></h2>
+                                    <h5>Rico Dute</h5>
+                                    <p>Everyday feels just like any other day.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" >
+                        <!-- Fajardo -->
+                        <div class="sptlght">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/fajardo-before.png" alt="" class="img-fluid img-thumbnail" style="height: 90%;"> 
+                                    <h5>Before</h5>
+                                </div>
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/fajardo-after.png" alt="" class="img-fluid img-thumbnail" style="height: 90%;">
+                                    <h5>After</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div col-lg-12>
+                                    <h5><b>Anthonette Mae Ramos Fajardo</b></h5>
+                                    <p>Even though you sometimes feel lonely and blue
+                                        there will always be colors surrounding you.
+                                        </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- Duff -->
+                        <div class="sptlght">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/duff-before.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;"> 
+                                    <h5>Before</h5>
+                                </div>
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/duff-after.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;">
+                                    <h5>After</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div col-lg-12>
+                                    <h2>Chin Up</h2>
+                                    <h5><b>Julius Terrence Duff</b></h5>
+                                    <p><em>Self-love and confidence</em> are the most beautiful things we can possess.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- Eucariza -->
+                        <div class="sptlght">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/josiah-before.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;"> 
+                                    <h5>Before</h5>
+                                </div>
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/josiah-after.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;">
+                                    <h5>After</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div col-lg-12>
+                                    <h5><b>Josiah Eucariza</b></h5>
+                                    <p>More people is sick hiding from their mask, Smile is the best mask one can wear to hide their tear and struggles in life.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- jacky -->
+                        <div class="sptlght">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/jacky-before.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;"> 
+                                    <h5>Before</h5>
+                                </div>
+                                <div class="col-lg-6">
+                                    <img src="images/soul-art/jacky-after.jpg" alt="" class="img-fluid img-thumbnail" style="height: 90%;">
+                                    <h5>After</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div col-lg-12>
+                                    <h5><b>Jacky Dialino</b></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
     </section>
     <section id="footer">
         <hr id="footer-id">
