--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
     <script src="https://kit.fontawesome.com/478a29708d.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container-fluid">
     <section id="navigation">
         <nav class="navbar navbar-expand-lg navbar-light ">
             <a href="" class="navbar-brand" id="brand">Beyond The Art</a>
@@ -44,10 +45,9 @@
     </section>
     <section id="about-us">
         <h1>About us</h1>
-        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                    <img src="images/user-icon/Marceline.ico" alt="">
+                    <img src="images/user-icon/Marceline.ico" alt="" class="profile">
                     <h3><b>Anthonette Fajardo</b></h3>
                     <h4>Leader</h4>
                     <p>"Badtrip nako"</p>
@@ -56,19 +56,19 @@
             <h2>Members</h2>
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="images/user-icon/Apache.ico" alt="">
+                    <img src="images/user-icon/Apache.ico" alt="" class="profile">
                     <h3><b>Rico Dute</b></h3>
                     <h4>Member</h4>
                     <p>"long hair ako ih"</p>
                 </div>
                 <div class="col-lg-4">
-                    <img src="images/user-icon/Batman (9).ico" alt="">
+                    <img src="images/user-icon/Batman (9).ico" alt="" class="profile">
                     <h3><b>Julius Terrence Duff</b></h3>
                     <h4>Member</h4>
                     <p>"Ako si batman!"</p>
                 </div>
                 <div class="col-lg-4">
-                    <img src="images/user-icon/Another World (3).ico" alt="">
+                    <img src="images/user-icon/Another World (3).ico" alt="" class="profile">
                     <h3><b>Josiah Eucariza</b></h3>
                     <h4>Member</h4>
                     <p>"....."</p>
@@ -76,13 +76,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="images/user-icon/Avatar The Last Airbender.ico" alt="">
+                    <img src="images/user-icon/Avatar The Last Airbender.ico" alt="" class="profile">
                     <h3><b>Jacky Dialino</b></h3>
                     <h4>Member</h4>
                     <p>"sat"</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/user-icon/Astronaut.ico" alt="">
+                    <img src="images/user-icon/Astronaut.ico" alt="" class="profile">
                     <h3><b>Jessica Lean Dapitan</b></h3>
                     <h4>Member</h4>
                     <p>Nasa moon ako guys</p>
