--- a/arts.html
+++ b/arts.html
@@ -340,6 +340,13 @@
                             <div class="row">
                                 <div col-lg-12>
                                     <h5><b>Jacky Dialino</b></h5>
+                                    <p>After the blackness of night, Earth's star rises on the horizon, 
+                                        spreading her gold in every direction. She comes in the way that 
+                                        natural forces do, needing not invitation yet feeling her welcome. 
+                                        The light is her gift, bold and free, for anyone who cares to open their 
+                                        eyes in the dawn and watch the world awake. This is our sun, a fire ignited 
+                                        to bring warmth to creation and inspire us to seek our own beauty within.
+                                    </p>
                                 </div>
                             </div>
                         </div>
