--- a/about.html
+++ b/about.html
@@ -45,6 +45,8 @@
     </section>
     <section id="about-us">
         <h1>About us</h1>
+        <h2>Hi! We are the group 7.</h2>
+
             <div class="row">
                 <div class="col-lg">
                     <img src="images/user-icon/Marceline.ico" alt="" class="profile">
