--- a/arts.html
+++ b/arts.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <hr>
-            <h3><b>Music</b></h3>
+            <h3><b>Film</b></h3>
             <div class="row sptlght">
                 <div class="col-lg-6">
                     <img src="images/luna.jpg" alt="" class="img-fluid img-thumbnail">
